--- a/html/list.html
+++ b/html/list.html
@@ -39,9 +39,8 @@
 					<a href="">退换保障</a><span>|</span>
 				</div>
 				<form action="" method="get" class="topform">
-					<input type="text" id="topsearch" class="splite splite-search" placeholder='全部女鞋'/
-					><input type="submit" value="搜索" id="topsearchsub"/>
-				</form>
+					<input type="text" id="topsearch" class="splite splite-search" placeholder='全部女鞋' /><input type="submit" value="搜索" id="topsearchsub"/>
+				</form> 
 			</div>
 		</div>
 		<div class="rightnav"></div>
