--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>欢迎登陆</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/index.css">
 		<link rel="stylesheet" type="text/css" href="/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="/css/register.css">
 		<script src="/js/lib/requirejs/require.js" data-main="/js/login"></script>
@@ -12,7 +12,7 @@
 		<div class="head register-head">
 			<div class="main">
 				<div class="head-right">
-					<a href="">购途市场首页</a>
+					<a href="/index.html">购途市场首页</a>
 					<a href="">在线客服</a>
 					<span>热线电话：4006611603 028-64911606</span>
 				</div>
@@ -34,7 +34,7 @@
 				<div class="login-model">
 					<h2>
 						购途会员
-						<a href="register.html" class="fr color-orange">免费注册</a>
+						<a href="/html/register.html" class="fr color-orange">免费注册</a>
 					</h2>	
 					<form>
 						<div class="login-input">
