--- a/html/product.html
+++ b/html/product.html
@@ -9,11 +9,22 @@
 		<script src="/js/lib/requirejs/require.js" data-main="/js/product"></script>
 	</head>
 	<body>
+		<!-- 确认框 -->
+		<div class="tocart">
+			<div class="cartbox">
+				<p class="mess">
+					商品已成功添加到进货单!
+					<a href="/html/cart.html" title="">查看进货单&gt&gt&gt</a>
+				</p>
+				<button class="alertclose">X</button>
+				<button class="know">知道了</button>
+			</div>
+		</div>
 		<div class="top"></div>
 		<div class="rightnav"></div>
 		<div class="head">
 			<div class="main">
-				<a href="/" class="headlogo fl"></a>
+				<a href="/" class="headlogo" style="float: left;"></a>
 				<div class="fl">
 					<span>请先</span>
 					<a href="/html/login.html" id="login" class="color-or">登录</a>
