--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>欢迎注册</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/index.css">
 		<link rel="stylesheet" type="text/css" href="/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="/css/register.css">
 		<script src="/js/lib/requirejs/require.js" data-main="/js/register"></script>
@@ -21,7 +21,7 @@
 		<div class="logo">
 			<div class="main">
 				<div class="logobox">
-					<img src="/images/images/go2_03.jpg">
+					<a href="/index.html"><img src="/images/images/go2_03.jpg"></a>
 					<div class="message">
 						<h2>欢迎注册</h2>
 						<p>中国鞋类厂商货源市场/一双也批发</p>
@@ -144,7 +144,7 @@
 									<label for="buyer-qq">
 										<span>QQ号码</span>
 									</label>
-									<input type="text" id="buyer-qq" placeholder="请输入你的QQ号码" name="qq">
+									<input type="text" id="buyer-qq" placeholder="请输入你的QQ号码" name="qq" name="qq">
 									<div class="info"></div>
 								</div>
 								<div>
@@ -170,11 +170,11 @@
 										<input type="checkbox" id="shop"><label for="shop">实体店主</label>
 										<input type="checkbox" id="any"><label for="any">随便逛逛</label>
 										<input type="text" placeholder="请输入第三方平台名称" id="third-party"><br>
-										<p class="info">可多选，便于系统为您推荐更适合的热销产品</p>
+										<p class="chooseinfo color-or">可多选，便于系统为您推荐更适合的热销产品</p> 
 									</div>
 								</div>
 								<div class="toleft">
-									<input type="radio" id="buyer-agreement">
+									<input type="checkbox" id="buyer-agreement" name="agreement" checked>
 									<label for="buyer-agreement">
 										我已阅读并同意&lt&lt
 										<a href="">购途平台服务协议</a>
@@ -199,7 +199,7 @@
 										<span>用户名</span>
 										<span class="must">*</span>
 									</label>
-									<input type="text" id="provider-username" placeholder="请设置2-20位汉字，字母或数字的用户名">
+									<input type="text" id="provider-username" placeholder="请设置2-20位汉字，字母或数字的用户名" name="username">
 									<div class="info"></div>
 								</div>
 								<div>
@@ -207,7 +207,7 @@
 										<span>设置密码</span>
 										<span class="must">*</span>
 									</label>
-									<input type="password" id="provider-password" placeholder="请设置6-20位字母或数字的密码">
+									<input type="password" id="provider-password" placeholder="请设置6-20位字母或数字的密码" name="password">
 									<div class="info"></div>
 								</div>
 								<div>
@@ -256,21 +256,21 @@
 										<span>手机号码</span>
 										<span class="must">*</span>
 									</label>
-									<input type="text" id="provider-phone" placeholder="请输入您的手机号码">
+									<input type="text" id="provider-phone" placeholder="请输入您的手机号码" name="phone">
 									<div class="info"></div>
 								</div>
 								<div>
 									<label for="provider-qq">
 										<span>QQ号码</span>
 									</label>
-									<input type="text" id="provider-qq" placeholder="请输入你的QQ号码">
+									<input type="text" id="provider-qq" placeholder="请输入你的QQ号码"  name="qq">
 									<div class="info"></div>
 								</div>
 								<div>
 									<label for="provider-email">
 										<span>邮箱地址</span>
 									</label>
-									<input type="text" id="provider-email" placeholder="请输入你正确的邮箱地址">
+									<input type="text" id="provider-email" placeholder="请输入你正确的邮箱地址"  name="email">
 									<div class="info"></div>
 								</div>
 								<h3>公司信息</h3>
@@ -345,7 +345,7 @@
 									<div class="info"></div>
 								</div>
 								<div class="toleft">
-									<input type="radio" id="provider-agreement">
+									<input type="checkbox" id="provider-agreement"  name="agreement" checked>
 									<label for="provider-agreement">
 										我已阅读并同意&lt&lt
 										<a href="">购途平台服务协议</a>
@@ -376,7 +376,7 @@
 										<span>用户名</span>
 										<span class="must">*</span>
 									</label>
-									<input type="text" id="agent-username" placeholder="请设置2-20位汉字，字母或数字的用户名">
+									<input type="text" id="agent-username" placeholder="请设置2-20位汉字，字母或数字的用户名" name="usename">
 									<div class="info"></div>
 								</div>
 								<div>
@@ -384,7 +384,7 @@
 										<span>设置密码</span>
 										<span class="must">*</span>
 									</label>
-									<input type="password" id="agent-password" placeholder="请设置6-20位字母或数字的密码">
+									<input type="password" id="agent-password" placeholder="请设置6-20位字母或数字的密码" name="password">
 									<div class="info"></div>
 								</div>
 								<div>
@@ -409,21 +409,21 @@
 										<span>手机号码</span>
 										<span class="must">*</span>
 									</label>
-									<input type="text" id="agent-phone" placeholder="请输入您的手机号码">
+									<input type="text" id="agent-phone" placeholder="请输入您的手机号码" name="phone">
 									<div class="info"></div>
 								</div>
 								<div>
 									<label for="agent-qq">
 										<span>QQ号码</span>
 									</label>
-									<input type="text" id="agent-qq" placeholder="请输入你的QQ号码">
+									<input type="text" id="agent-qq" placeholder="请输入你的QQ号码"  name="qq">
 									<div class="info"></div>
 								</div>
 								<div>
 									<label for="agent-email">
 										<span>邮箱地址</span>
 									</label>
-									<input type="text" id="agent-email" placeholder="请输入你正确的邮箱地址">
+									<input type="text" id="agent-email" placeholder="请输入你正确的邮箱地址"  name="email">
 									<div class="info"></div>
 								</div>
 								<h3>公司信息</h3>
@@ -452,7 +452,7 @@
 									<div class="info"></div>
 								</div>
 								<div class="toleft">
-									<input type="radio" id="agent-agreement">
+									<input type="checkbox" id="agent-agreement"  name="agreement" checked>
 									<label for="buyer-agreement">
 										我已阅读并同意&lt&lt
 										<a href="">购途平台服务协议</a>
